adding code for opening doner registeration

--- a/src/userinterface/DonorRole/DonorRegistrationJPanel.form
+++ b/src/userinterface/DonorRole/DonorRegistrationJPanel.form
@@ -83,10 +83,9 @@
                               <Component id="radOrganAvailableNo" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="11" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="211" max="-2" attributes="0"/>
