--- a/src/userinterface/SystemAdminWorkArea/NetworkManagementJPanel.form
+++ b/src/userinterface/SystemAdminWorkArea/NetworkManagementJPanel.form
@@ -45,11 +45,15 @@
                                       <Component id="jLabel1" min="-2" pref="89" max="-2" attributes="0"/>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="txt_city_Name" min="-2" pref="216" max="-2" attributes="0"/>
-                                          <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                              <Component id="btn_add_new_city" alignment="0" max="32767" attributes="0"/>
-                                              <Component id="btn_back_button" alignment="0" max="32767" attributes="0"/>
+                                          <Group type="102" attributes="0">
+                                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                                  <Component id="btn_add_new_city" linkSize="1" alignment="0" max="32767" attributes="0"/>
+                                                  <Component id="btn_back_button" alignment="0" max="32767" attributes="0"/>
+                                              </Group>
+                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                              <Component id="btnDeleteCity" linkSize="1" min="-2" max="-2" attributes="0"/>
                                           </Group>
+                                          <Component id="txt_city_Name" min="-2" pref="229" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -61,7 +65,7 @@
                       <Component id="jLabel2" min="-2" pref="410" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="373" max="32767" attributes="0"/>
+              <EmptySpace pref="349" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -84,13 +88,16 @@
                           <Component id="txt_city_Name" alignment="1" min="-2" pref="33" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="btn_add_new_city" min="-2" pref="31" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="btn_add_new_city" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                          <Component id="btnDeleteCity" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                       <Component id="btn_back_button" min="-2" pref="35" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane1" pref="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="418" max="32767" attributes="0"/>
+              <EmptySpace pref="417" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -223,6 +230,14 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Add a city to the network"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnDeleteCity">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Delete"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDeleteCityActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
